--- a/css/RWD/RWDTemplates_01_BandTemplate.html
+++ b/css/RWD/RWDTemplates_01_BandTemplate.html
@@ -136,7 +136,120 @@
   </div>
 
   <!-- Ticket Modal -->
+  <div id="ticketModal" class="w3-modal">
+    <div class="w3-modal-content w3-animate-top w3-card-8">
+      <header class="w3-container w3-teal w3-center w3-padding-32">
+        <span onclick="document.getElementById('ticketModal').style.display='none'" class="w3-closebtn w3-padding-xlarge w3-xxlarge w3-display-topright">×</span>
+        <h2 class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>Tickets</h2>
+      </header>
+      <div class="w3-container">
+        <p><label><i class="fa fa-shopping-cart"></i> Tickets, $15 per person</label></p>
+        <input class="w3-input w3-border" type="text" placeholder="How many?">
+        <p><label><i class="fa fa-user"></i> Send To</label></p>
+        <input class="w3-input w3-border" type="text" placeholder="Enter email">
+        <button class="w3-btn-block w3-teal w3-padding-12 w3-section w3-right">PAY <i class="fa fa-check"></i></button>
+        <button class="w3-btn w3-red w3-section" onclick="document.getElementById('ticketModal').style.display='none'">Close <i class="fa fa-remove"></i></button>
+        <p class="w3-right">Need <a href="#" class="w3-text-blue">help?</a></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- The Contact Section -->
+  <div class="w3-container w3-content w3-padding-64" style="max-width: 800px" id="contact">
+    <h2 class="w3-wide w3-center">CONTACT</h2>
+    <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
+    <div class="w3-row w3-padding-32">
+      <div class="w3-col m6 w3-large w3-margin-bottom">
+        <i class="fa fa-map-marker" style="width: 30px;"></i> Chicago, US<br />
+        <i class="fa fa-phone" style="width: 30px;"></i> Phone: +00 151515<br />
+        <i class="fa fa-envelope" style="width: 30px;"></i> Email: mail@mail.com<br />
+      </div>
+      <div class="w3-col m6">
+        <div class="w3-row-padding" style="margin:0 -16px 8px -16px;">
+          <div class="w3-half">
+            <input class="w3-input w3-border" type="text" placeholder="Name">
+          </div>
+          <div class="w3-half">
+            <input class="w3-input w3-border" type="text" placeholder="Email">
+          </div>
+        </div>
+        <input class="w3-input w3-border" type="text" placholder="Comment">
+        <button class="w3-btn w3-section w3-right">SEND</button>
+      </div>
+    </div>
+  </div>
+
+<!-- End Page Content -->
 </div>
+
+<!-- Add Google Maps -->
+<div id="googleMap" style="height: 400px;filter: grayscale(90%);-webkit-filter: grayscale(90%);"></div>
+<script src="https://maps.googleapis.com/maps/api/js"></script>
+<script>
+  var myCenter = new google.maps.LatLng(41.878114, -87.629798);
+
+  function initialize() {
+  	var mapProp = {
+  		center: myCenter,
+  		zoom: 12,
+  		scrollwheel: false,
+  		draggable: false,
+  		mapTypeId: google.maps.MapTypeId.ROADMAP
+  	};
+  	var map = new google.maps.Map(document.getELementById("googleMap"),mapProp);
+  	var marker = new google.maps.Marker({
+  		position: myCenter,
+  	});
+  	marker.setMap(map);
+  }
+  google.maps.event.addDomListener(window, 'load', initialize);
+</script>
+
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+  <a href="#" class="w3-hover-text-indigo"><i class="fa fa-facebook-official"></i></a>
+  <a href="#" class="w3-hover-text-red"><i class="fa fa-pinterest-p"></i></a>
+  <a href="#" class="w3-hover-text-light-blue"><i class="fa fa-twitter"></i></a>
+  <a href="#" class="w3-hover-text-grey"><i class="fa fa-flickr"></i></a>
+  <a href="#" class="w3-hover-text-indigo"><i class="fa fa-linkedin"></i></a>
+  <p class="w3-medium">Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
+
+<script>
+  // Automatic Slideshow - change image every 4 seconds
+  var myIndex = 0;
+  carousel();
+
+  function carousel() {
+  	var i;
+  	var x = document.getElementsByClassName("mySlides");
+  	for (i = 0; i < x.length; i++) {
+  		x[i].style.display = "none";
+  	}
+  	myIndex++;
+  	if (myIndex > x.length) {myIndex = 1}
+  	x[myIndex-1].style.display = "block";
+  setTimeout(carousel, 4000);
+  }
+
+  // Used to toggle the menu on small screens when clicking on the menu button
+  function myFunction() {
+  	var x = document.getElementById("navDemo");
+  	if (x.className.indexOf("w3-show") == -1){
+  		x.className += " w3-show";
+  	} else {
+  		x.className = x.className.replace(" w3-show", "");
+  	}
+  }
+
+  // When the user clicks anywhere outside of the modal, close it
+  var modal = document.getElementById('ticketModal');
+  window.onclick = function(event) {
+  	if (event.target == modal) {
+  		modal.style.display = "none";
+  	}
+  }
+</script>
 
 </body>
 </html>
