--- a/css/RWD/RWDTemplates_04_PhotoTemplate.html
+++ b/css/RWD/RWDTemplates_04_PhotoTemplate.html
@@ -69,6 +69,36 @@
 </div>
 
 <!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity" style="margin-top: 128px">
+  <div class="w3-xlarge w3-padding-32">
+    <a href="#" class="w3-hover-text-indigo"><i class="fa fa-facebook-official"></i></a>
+    <a href="#" class="w3-hover-text-red"><i class="fa fa-pinterest-p"></i></a>
+    <a href="#" class="w3-hover-text-light-blue"><i class="fa fa-twitter"></i></a>
+    <a href="#" class="w3-hover-text-grey"><i class="fa fa-flickr"></i></a>
+    <a href="#" class="w3-hover-text-indigo"><i class="fa fa-linkedin"></i></a>
+  </div>
+  <p style="font-weight: normal;">Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+</footer>
+
+<script>
+  // Toggle grid padding
+  function myFunction() {
+  	var x = document.getElementById("myGrid");
+  	if (x.className === "w3-row") {
+  		x.className = "w3-row-padding";
+  	} else {
+  		x.className = x.className.replace("w3-row-padding", "w3-row");
+  	}
+  }
+  // Open and close sidenav
+  function w3_open() {
+  	document.getElementById("mySidenav").style.width = "100%";
+  	document.getElementById("mySidenav").style.display = "block";
+  }
+  function w3_close() {
+  	document.getElementById("mySidenav").style.display = "none";
+  }
+</script>
 
 </body>
 </html>
