--- a/css/RWD/RWDTemplates_07_ParallaxTemplate.html
+++ b/css/RWD/RWDTemplates_07_ParallaxTemplate.html
@@ -33,6 +33,7 @@ body, html {
   background-image: url("/w3images/parallax2.jpg");
   min-height: 400px;
 }
+/* Third image (Contact) */
 .bgimg-3 {
   background-image: url("/w3images/parallax3.jpg");
   min-height: 400px;
@@ -41,12 +42,12 @@ body, html {
 .w3-wide {letter-spacing: 10px;}
 .w3-hover-opacty {cursor: pointer;}
 
-#googleMap {
+/* #googleMap {
   width: 100%;
   height: 400px;
   -webkit-filter: grayscale(90%);
   filter: grayscale(90%);
-}
+} */
 
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-width: 1024px) {
@@ -103,6 +104,25 @@ body, html {
   <p class="w3-wide">Photoshop</p>
   <div class="w3-progress-container">
     <div class="w3-progressbar" style="width: 75%;"></div>
+  </div>
+</div>
+
+<div class="w3-row w3-center w3-dark-grey w3-padding-16">
+  <div class="w3-quarter w3-section">
+    <span class="w3-xlarge">14+</span><br />
+    Partners
+  </div>
+  <div class="w3-quarter w3-section">
+    <span class="w3-xlarge">55+</span><br />
+    Projects Done
+  </div>
+  <div class="w3-quarter w3-section">
+    <span class="w3-xlarge">89+</span><br />
+    Happy Clients
+  </div>
+  <div class="w3-quarter w3-section">
+    <span class="w3-xlarge">150+</span><br />
+    Meetings
   </div>
 </div>
 
@@ -217,7 +237,8 @@ body, html {
 </footer>
 
 <!-- Add Google Maps -->
-<script src="https://maps.googleapis.com/maps/api/js"></script>js
+<script src="https://maps.googleapis.com/maps/api/js"></script>
+<!-- Google Map Location -->
 <script>
   var myCenter = new google.maps.LatLng(41.878114, -87.629798);
 
