--- a/bootstrap/BSThemes/BSThemes_03_Band.html
+++ b/bootstrap/BSThemes/BSThemes_03_Band.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container text-center">
   <h3>THE BAND</h3>
   <p>We love music!</p>
   <p>We have created a fictional band website. Lorem ipsum..</p>
