--- a/bootstrap/BSThemes/BSThemes_03_Band.html
+++ b/bootstrap/BSThemes/BSThemes_03_Band.html
@@ -20,6 +20,21 @@
   <h3>THE BAND</h3>
   <p>We love music!</p>
   <p>We have created a fictional band website. Lorem ipsum..</p>
+  <br />
+  <div class="row">
+    <div class="col-sm-4">
+      <p><strong>Name</strong></p><br />
+      <img src="bandmember.jpg" alt="Random Name" width="255" height="255">
+    </div>
+    <div class="col-sm-4">
+      <p><strong>Name</strong></p><br />
+      <img src="bandmember.jpg" alt="Random Name" width="255" height="255">
+    </div>
+    <div class="col-sm-4">
+      <p><strong>Name</strong></p><br />
+      <img src="bandmember.jpg" alt="Random Name" width="255" height="255">
+    </div>
+  </div>
 </div>
 
 </body>
