--- a/bootstrap/BSThemes/BSThemes_03_Band.html
+++ b/bootstrap/BSThemes/BSThemes_03_Band.html
@@ -12,6 +12,16 @@
   .container {
   	padding: 80px 120px;
   }
+  .person {
+  	border: 10px solid transparent;
+  	margin-bottom: 25px;
+  	width: 80%;
+  	height: 80%;
+  	opacity: 0.7;
+  }
+  .person:hover {
+  	border-color: #f1f1f1;
+  }
   </style>
 </head>
 <body>
@@ -24,15 +34,15 @@
   <div class="row">
     <div class="col-sm-4">
       <p><strong>Name</strong></p><br />
-      <img src="bandmember.jpg" alt="Random Name" width="255" height="255">
+      <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
     </div>
     <div class="col-sm-4">
       <p><strong>Name</strong></p><br />
-      <img src="bandmember.jpg" alt="Random Name" width="255" height="255">
+      <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
     </div>
     <div class="col-sm-4">
       <p><strong>Name</strong></p><br />
-      <img src="bandmember.jpg" alt="Random Name" width="255" height="255">
+      <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
     </div>
   </div>
 </div>
