--- a/bootstrap/BSThemes/BSThemes_03_Band.html
+++ b/bootstrap/BSThemes/BSThemes_03_Band.html
@@ -33,16 +33,37 @@
   <br />
   <div class="row">
     <div class="col-sm-4">
-      <p><strong>Name</strong></p><br />
-      <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+      <p class="text-center"><strong>Name</strong></p><br />
+      <a href="#demo" data-toggle="collapse">
+        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+      </a>
+      <div id="demo" class="collapse">
+        <p>Guitaris and Lead Vocalist</p>
+        <p>Loves long walks on the beach</p>
+        <p>Member since 1988</p>
+      </div>
     </div>
     <div class="col-sm-4">
-      <p><strong>Name</strong></p><br />
-      <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+      <p class="text-center"><strong>Name</strong></p><br />
+      <a href="#demo2" data-toggle="collapse">
+        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+      </a>
+      <div id="demo2" class="collapse">
+        <p>Drummer</p>
+        <p>Loves drummin'</p>
+        <p>Member since 1988</p>
+      </div>
     </div>
     <div class="col-sm-4">
-      <p><strong>Name</strong></p><br />
-      <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+      <p class="text-center"><strong>Name</strong></p><br />
+      <a href="#demo3" data-toggle="collapse">
+        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+      </a>
+      <div id="demo3" class="collapse">
+        <p>Bass player</p>
+        <p>Loves math</p>
+        <p>Member since 2005</p>
+      </div>
     </div>
   </div>
 </div>
