--- a/bootstrap/BSThemes/BSThemes_03_Band.html
+++ b/bootstrap/BSThemes/BSThemes_03_Band.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.boostrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
   .container {
   	padding: 80px 120px;
@@ -53,7 +53,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="ny.jpg" alt="New York">
+      <img src="ny.jpg" alt="New York" width="1200" height="700">
       <div class="carousel-caption">
         <h3>New York</h3>
         <p>The atmosphere in New York is lorem ipsum.</p>
@@ -61,7 +61,7 @@
     </div>
 
     <div class="item">
-      <img src="chicago.jpg" alt="Chicago">
+      <img src="chicago.jpg" alt="Chicago" width="1200" height="700">
       <div class="carousel-caption">
         <h3>Chicago</h3>
         <p>Thank you, Chicago - A night we won't forget.</p>
@@ -69,7 +69,7 @@
     </div>
 
     <div class="item">
-      <img src="la.jpg" alt="Los Angeles">
+      <img src="la.jpg" alt="Los Angeles" width="1200" height="700">
       <div class="carousel-caption">
         <h3>LA</h3>
         <p>Even though the traffic was a mess, we had the best time.</p>
