Add Tour Container

--- a/bootstrap/BSThemes/BSThemes_03_Band.html
+++ b/bootstrap/BSThemes/BSThemes_03_Band.html
@@ -38,6 +38,12 @@
   		display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
   	}
   }
+  .bg-1 {
+  	background: #2d2d30;
+  	color: #bdbdbd;
+  }
+  .bg-1 h3 {color: #fff;}
+  .bg-1 p {font-style: italic;}
   </style>
 </head>
 <body>
@@ -127,6 +133,19 @@
         <p>Member since 2005</p>
       </div>
     </div>
+  </div>
+</div>
+
+<!-- Container (TOUR Section) -->
+<div class="bg-1">
+  <div class="container">
+    <h3 class="text-center">TOUR DATES</h3>
+    <p class="text-center">Lorem ipsum we'll play you some music.<br /> Remember to book your tickets!</p>
+    <ul class="list-group">
+      <li class="list-group-item">September Sold Out!</li>
+      <li class="list-group-item">October Sold Out!</li>
+      <li class="list-group-item">November 3</li>
+    </ul>
   </div>
 </div>
 
