BS Theme Band - Add Labels & Badges

--- a/bootstrap/BSThemes/BSThemes_03_Band.html
+++ b/bootstrap/BSThemes/BSThemes_03_Band.html
@@ -142,9 +142,9 @@
     <h3 class="text-center">TOUR DATES</h3>
     <p class="text-center">Lorem ipsum we'll play you some music.<br /> Remember to book your tickets!</p>
     <ul class="list-group">
-      <li class="list-group-item">September Sold Out!</li>
-      <li class="list-group-item">October Sold Out!</li>
-      <li class="list-group-item">November 3</li>
+      <li class="list-group-item">September <span class="label label-danger">Sold Out!</span></li>
+      <li class="list-group-item">October <span class="label label-danger">Sold Out!</span></li>
+      <li class="list-group-item">November <span class="badge">3</span></li>
     </ul>
   </div>
 </div>
