Add some comments on style

--- a/bootstrap/BSThemes/BSThemes_03_Band.html
+++ b/bootstrap/BSThemes/BSThemes_03_Band.html
@@ -44,6 +44,7 @@
   }
   .bg-1 h3 {color: #fff;}
   .bg-1 p {font-style: italic;}
+  /* Remove rounded borders from list */
   .list-group-item:first-child {
   	border-top-right-radius: 0;
   	border-top-left-radius: 0;
@@ -52,6 +53,7 @@
   	border-bottom-right-radius: 0;
   	border-bottom-left-radius: 0;
   }
+  /* Remove border and add padding to thumbnails */
   .thumbnail {
   	padding: 0 0 15px 0;
   	border: none;
@@ -61,6 +63,7 @@
   	margin-top: 15px;
   	color: #555;
   }
+  /* Black buttons with extra padding and without rounded borders */
   .btn {
   	padding: 10px 20px;
   	background-color: #333;
@@ -68,6 +71,7 @@
   	border-radius: 0;
   	transition: .2s;
   }
+  /* On hover, the color of .btn will transition to white with black text */
   .btn:hover, .btn:focus {
   	border: 1px solid #333;
   	background-color: #fff;
