--- a/bootstrap/BSThemes/BSThemes_03_Band.html
+++ b/bootstrap/BSThemes/BSThemes_03_Band.html
@@ -131,7 +131,7 @@
   .dropdown-menu li a {
   	color: #000 !important;
   }
-  /* On hover, the dropdown links will turn red */
+  /* On hover, the dropdown links will turn red joss */
   .dropdown-menu li a:hover {
   	background-color: red !important;
   }
