BS Theme Band - Add a Footer

--- a/bootstrap/BSThemes/BSThemes_03_Band.html
+++ b/bootstrap/BSThemes/BSThemes_03_Band.html
@@ -135,6 +135,18 @@
   .dropdown-menu li a:hover {
   	background-color: red !important;
   }
+  footer {
+  	background-color: #2d2d30;
+  	color: #f5f5f5;
+  	padding: 32px;
+  }
+  footer a {
+  	color: #f5f5f5;
+  }
+  footer a:hover {
+  	color: #777;
+  	text-decoration: none;
+  }
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -412,6 +424,21 @@
   }
 
   google.maps.event.addDomListener(window, 'load', initialize);
+</script>
+
+<!-- Footer -->
+<footer class="text-center">
+  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+  </a><br /><br />
+  <p>Bootstrap Theme Made By <a href="http://www.w3schools.com" data-toggle="tooltip" title="Visit w3schools">www.w3schools.com</a></p>
+</footer>
+
+<script>
+  $(document).ready(function(){
+  	// Initialize Tooltip
+  	$('[data-toggle="tooltip"]').tooltip();
+  })
 </script>
 
 </body>
