--- a/bootstrap/BSThemes/BSThemes_03_Band.html
+++ b/bootstrap/BSThemes/BSThemes_03_Band.html
@@ -9,6 +9,17 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
+  body {
+  	font: 400 15px/1.8 Lato, sans-serif;
+  	color: #777;
+  }
+  /* Overwrite default styles of h3 and h4 */
+  h3, h4 {
+  	margin: 10px 0 30px 0;
+  	letter-spacing: 10px;
+  	font-size: 20px;
+  	color: #111;
+  }
   .container {
   	padding: 80px 120px;
   }
@@ -98,6 +109,7 @@
   }
   /* Add a dark background color with a litle bit see-through */
   .navbar {
+  	font-family: Montserrat, sans-serif;
   	margin-bottom: 0;
   	background-color: #2d2d30;
   	border: 0;
@@ -146,6 +158,14 @@
   footer a:hover {
   	color: #777;
   	text-decoration: none;
+  }
+  /* Remove rounded borders on input fields */
+  .font-control {
+  	border-radius: 0;
+  }
+  /* Disable the ability to resize textareas */
+  textarea {
+  	resize: none;
   }
   </style>
 </head>
@@ -231,7 +251,7 @@
 <div id="band" class="container text-center">
   <h3>THE BAND</h3>
   <p>We love music!</p>
-  <p>We have created a fictional band website. Lorem ipsum..</p>
+  <p>We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   <br />
   <div class="row">
     <div class="col-sm-4">
