My First Portfolio - Add Bootstrap CDN and Add a Container

--- a/prototype/my1stportfolio.html
+++ b/prototype/my1stportfolio.html
@@ -3,10 +3,14 @@
 <head>
   <title>Bootstrap Theme The Band</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<div>
+<div class="container">
   <h3>SUCCUBUS69</h3>
   <p>I love to create magic!</p>
   <p>I have been in love with art since I was very small. Bla bla bla...</p>
