--- a/prototype/my1stportfolio.html
+++ b/prototype/my1stportfolio.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container text-center">
   <h3>SUCCUBUS69</h3>
   <p>I love to create magic!</p>
   <p>I have been in love with art since I was very small. Bla bla bla...</p>
