My First Portfolio - Add Padding and Emphasize the 'I love to create magic'

--- a/prototype/my1stportfolio.html
+++ b/prototype/my1stportfolio.html
@@ -7,12 +7,17 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+  .container {
+  	padding: 80px 120px;
+  }
+  </style>
 </head>
 <body>
 
 <div class="container text-center">
   <h3>SUCCUBUS69</h3>
-  <p>I love to create magic!</p>
+  <p><em>I love to create magic!</em></p>
   <p>I have been in love with art since I was very small. Bla bla bla...</p>
 </div>
 
