My First Portfolio - Add a Grid

--- a/prototype/my1stportfolio.html
+++ b/prototype/my1stportfolio.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Originally from www.w3schools.com - No Copyright -->
   <title>Bootstrap Theme The Band</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,6 +20,21 @@
   <h3>SUCCUBUS69</h3>
   <p><em>I love to create magic!</em></p>
   <p>I have been in love with art since I was very small. Bla bla bla...</p>
+  <br />
+  <div class="row">
+    <div class="col-sm-4">
+      <p><strong>Project</strong></p><br />
+      <img src="bandmember.jpg" alt="Succubus69 Project" width="255" height="255">
+    </div>
+    <div class="col-sm-4">
+      <p><strong>Project</strong></p><br />
+      <img src="bandmember.jpg" alt="Succubus69 Project" width="255" height="255">
+    </div>
+    <div class="col-sm-4">
+      <p><strong>Project</strong></p><br />
+      <img src="bandmember.jpg" alt="Succubus69 Project" width="255" height="255">
+    </div>
+  </div>
 </div>
 
 </body>
