My First Portfolio - Change img-circle to img-thumbnail

--- a/prototype/my1stportfolio.html
+++ b/prototype/my1stportfolio.html
@@ -13,7 +13,7 @@
   	padding: 80px 120px;
   }
   .person {
-  	border: 10px solid transparent;
+  	/*border: 10px solid transparent;*/
   	margin-bottom: 25px;
   	width: 80%;
   	height: 80%;
@@ -34,15 +34,15 @@
   <div class="row">
     <div class="col-sm-4">
       <p><strong>Project</strong></p><br />
-      <img src="bandmember.jpg" class="img-circle person" alt="Succubus69 Project" width="255" height="255">
+      <img src="bandmember.jpg" class="img-thumbnail person" alt="Succubus69 Project" width="255" height="255">
     </div>
     <div class="col-sm-4">
       <p><strong>Project</strong></p><br />
-      <img src="bandmember.jpg" class="img-circle person" alt="Succubus69 Project" width="255" height="255">
+      <img src="bandmember.jpg" class="img-thumbnail person" alt="Succubus69 Project" width="255" height="255">
     </div>
     <div class="col-sm-4">
       <p><strong>Project</strong></p><br />
-      <img src="bandmember.jpg" class="img-circle person" alt="Succubus69 Project" width="255" height="255">
+      <img src="bandmember.jpg" class="img-thumbnail person" alt="Succubus69 Project" width="255" height="255">
     </div>
   </div>
 </div>
