--- a/prototype/my1stportfolio.html
+++ b/prototype/my1stportfolio.html
@@ -13,10 +13,10 @@
   	padding: 80px 120px;
   }
   .person {
-  	/*border: 10px solid transparent;*/
+  	border: 10px solid transparent;
   	margin-bottom: 25px;
-  	width: 80%;
-  	height: 80%;
+  	width: 70%;
+  	height: 70%;
   	opacity: 0.7;
   }
   .person:hover {
@@ -33,16 +33,37 @@
   <br />
   <div class="row">
     <div class="col-sm-4">
-      <p><strong>Project</strong></p><br />
-      <img src="bandmember.jpg" class="img-thumbnail person" alt="Succubus69 Project" width="255" height="255">
+      <p class="text-center"><strong>Project</strong></p><br />
+      <a href="#demo" data-toggle="collapse">
+        <img src="bandmember.jpg" class="img-thumbnail person" alt="Succubus69 Project" width="255" height="255">
+      </a>
+      <div id="demo" class="collapse">
+        <p>Isi konten title</p>
+        <p>Isi konten sub-title</p>
+        <p>Isi konten body</p>
+      </div>
     </div>
     <div class="col-sm-4">
-      <p><strong>Project</strong></p><br />
-      <img src="bandmember.jpg" class="img-thumbnail person" alt="Succubus69 Project" width="255" height="255">
+      <p class="text-center"><strong>Project</strong></p><br />
+      <a href="#demo2" data-toggle="collapse">
+        <img src="bandmember.jpg" class="img-thumbnail person" alt="Succubus69 Project" width="255" height="255">
+      </a>
+      <div id="demo2" class="collapse">
+        <p>Isi konten title</p>
+        <p>Isi konten sub-title</p>
+        <p>Isi konten body</p>
+      </div>
     </div>
     <div class="col-sm-4">
-      <p><strong>Project</strong></p><br />
-      <img src="bandmember.jpg" class="img-thumbnail person" alt="Succubus69 Project" width="255" height="255">
+      <p class="text-center"><strong>Project</strong></p><br />
+      <a href="#demo3" data-toggle="collapse">
+        <img src="bandmember.jpg" class="img-thumbnail person" alt="Succubus69 Project" width="255" height="255">
+      </a>
+      <div id="demo3" class="collapse">
+        <p>Isi konten title</p>
+        <p>Isi konten sub-title</p>
+        <p>Isi konten body</p>
+      </div>
     </div>
   </div>
 </div>
